Bug 296348 - threading-related crash in CMakeManager::initializeProject
Summary: threading-related crash in CMakeManager::initializeProject
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: CMake (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: VHI crash
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 280994 292927 297058 297985 305094 308864 309199 312029 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-19 12:09 UTC by Milian Wolff
Modified: 2013-11-16 20:14 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milian Wolff 2012-03-19 12:09:45 UTC
User-Agent:       Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:11.0) Gecko/20100101 Firefox/11.0
Build Identifier: 

Yet another crash related to threading and thread-insafety in the CMakeManager code.

Reproducible: Sometimes

Steps to Reproduce:
opened a session with multiple cmake projects that got re-opened -> crash
Actual Results:  
Application: KDevelop (kdevelop), signal: Aborted
__lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/x86_64/lowlevellock.S:97
	in ../nptl/sysdeps/unix/sysv/linux/x86_64/lowlevellock.S
[Current thread is 1 (Thread 0x7ff0f33a17a0 (LWP 25094))]

Thread 13 (Thread 0x7ff0d97f8700 (LWP 25095)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007ff0f17de9cf in QWaitCondition::wait(QMutex*, unsigned long) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#2  0x00007ff0eda80c5a in KDevelop::DUChainPrivate::CleanupThread::run (this=0x30a0d80) at /home/milian/projects/kde4/kdevplatform/language/duchain/duchain.cpp:282
#3  0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#4  0x00007ff0ef7e7efc in start_thread (arg=0x7ff0d97f8700) at pthread_create.c:304
#5  0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7ff0c6d5d700 (LWP 25099)):
#0  0x00007ff0ef7eb1fd in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x7ff0d4003528) at pthread_mutex_unlock.c:290
#2  0x00007ff0eb4f6fe4 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff0eb4f7dfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007ff0eb4f8429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff0f190cb86 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#6  0x00007ff0f18dc8b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#7  0x00007ff0f18dcb07 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#8  0x00007ff0f17db537 in QThread::exec() () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#9  0x00007ff0edba5611 in KDevelop::CompletionWorkerThread::run (this=0x3ae7740) at /home/milian/projects/kde4/kdevplatform/language/codecompletion/codecompletionmodel.cpp:84
#10 0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#11 0x00007ff0ef7e7efc in start_thread (arg=0x7ff0c6d5d700) at pthread_create.c:304
#12 0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7ff0c655c700 (LWP 25100)):
#0  0x00007ff0ef7ea034 in __pthread_mutex_lock (mutex=0x3ae4528) at pthread_mutex_lock.c:61
#1  0x00007ff0eb4f7023 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff0eb4f7dfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff0eb4f8429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007ff0f190cb86 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#5  0x00007ff0f18dc8b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#6  0x00007ff0f18dcb07 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#7  0x00007ff0f17db537 in QThread::exec() () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#8  0x00007ff0edba5611 in KDevelop::CompletionWorkerThread::run (this=0x3ae73f0) at /home/milian/projects/kde4/kdevplatform/language/codecompletion/codecompletionmodel.cpp:84
#9  0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#10 0x00007ff0ef7e7efc in start_thread (arg=0x7ff0c655c700) at pthread_create.c:304
#11 0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7ff0c5d5b700 (LWP 25107)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007ff0da265c62 in ?? () from /home/milian/projects/compiled/qt/lib/libQtScript.so.4
#2  0x00007ff0da265c99 in ?? () from /home/milian/projects/compiled/qt/lib/libQtScript.so.4
#3  0x00007ff0ef7e7efc in start_thread (arg=0x7ff0c5d5b700) at pthread_create.c:304
#4  0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7ff0c4ffd700 (LWP 25119)):
#0  0x00007ff0f17beda0 in __tls_get_addr@plt () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#1  0x00007ff0f17dd66a in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#2  0x00007ff0f190c269 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#3  0x00007ff0eb4f6ff2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007ff0eb4f7dfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff0eb4f8429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007ff0f190cb86 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#7  0x00007ff0f18dc8b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#8  0x00007ff0f18dcb07 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#9  0x00007ff0f17db537 in QThread::exec() () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#10 0x00007ff0f18bc6df in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#11 0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#12 0x00007ff0ef7e7efc in start_thread (arg=0x7ff0c4ffd700) at pthread_create.c:304
#13 0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#14 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7ff0bef48700 (LWP 25262)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007ff0e8a63ffc in ?? () from /home/milian/projects/compiled/qt/lib/libQtWebKit.so.4
#2  0x00007ff0e8a64129 in ?? () from /home/milian/projects/compiled/qt/lib/libQtWebKit.so.4
#3  0x00007ff0ef7e7efc in start_thread (arg=0x7ff0bef48700) at pthread_create.c:304
#4  0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7ff0bf749700 (LWP 25263)):
#0  0x00007ff0f0471473 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007ff0eb4f7f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff0eb4f8429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff0f190cb86 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#4  0x00007ff0f18dc8b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#5  0x00007ff0f18dcb07 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#6  0x00007ff0f17db537 in QThread::exec() () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#7  0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#8  0x00007ff0ef7e7efc in start_thread (arg=0x7ff0bf749700) at pthread_create.c:304
#9  0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7ff07d510700 (LWP 25302)):
#0  __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/x86_64/lowlevellock.S:97
#1  0x00007ff0f041a62f in _L_lock_10501 () from /lib/x86_64-linux-gnu/libc.so.6
#2  0x00007ff0f04189c1 in __GI___libc_free (mem=0x7ff0c0000020) at malloc.c:3736
#3  0x00007ff0cadf5c0a in CMakeParserUtils::executeProcess (execName=..., args=...) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/parser/cmakeparserutils.cpp:126
#4  0x00007ff0cadf4e6d in CMakeParserUtils::initialVariables () at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/parser/cmakeparserutils.cpp:75
#5  0x00007ff0c419c9ed in CMakeManager::initializeProject (this=0x492ebc0, project=0x411e140) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:491
#6  0x00007ff0c419e9cd in CMakeManager::parse (this=0x492ebc0, item=0x4a82050) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:694
#7  0x00007ff0ee12d8d9 in KDevelop::ImportProjectJobPrivate::import (this=0x1b32050, folder=0x4a82050) at /home/milian/projects/kde4/kdevplatform/project/importprojectjob.cpp:53
#8  0x00007ff0ee12de2c in QtConcurrent::VoidStoredMemberFunctionPointerCall1<void, KDevelop::ImportProjectJobPrivate, KDevelop::ProjectFolderItem*, KDevelop::ProjectFolderItem*>::runFunctor (this=0x49f0610) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentstoredfunctioncall.h:412
#9  0x00007ff0ee12d65e in QtConcurrent::RunFunctionTask<void>::run (this=0x49f0610) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentrunbase.h:134
#10 0x00007ff0f17d1d22 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#11 0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#12 0x00007ff0ef7e7efc in start_thread (arg=0x7ff07d510700) at pthread_create.c:304
#13 0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#14 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7ff07cd0f700 (LWP 25341)):
#0  __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/x86_64/lowlevellock.S:97
#1  0x00007ff0f041a62f in _L_lock_10501 () from /lib/x86_64-linux-gnu/libc.so.6
#2  0x00007ff0f04189c1 in __GI___libc_free (mem=0x7ff0c0000020) at malloc.c:3736
#3  0x00007ff0cadf5c0a in CMakeParserUtils::executeProcess (execName=..., args=...) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/parser/cmakeparserutils.cpp:126
#4  0x00007ff0cadf4e6d in CMakeParserUtils::initialVariables () at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/parser/cmakeparserutils.cpp:75
#5  0x00007ff0c419c9ed in CMakeManager::initializeProject (this=0x492ebc0, project=0x3edd530) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:491
#6  0x00007ff0c419e9cd in CMakeManager::parse (this=0x492ebc0, item=0x498a790) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:694
#7  0x00007ff0ee12d8d9 in KDevelop::ImportProjectJobPrivate::import (this=0x4a49ce0, folder=0x498a790) at /home/milian/projects/kde4/kdevplatform/project/importprojectjob.cpp:53
#8  0x00007ff0ee12de2c in QtConcurrent::VoidStoredMemberFunctionPointerCall1<void, KDevelop::ImportProjectJobPrivate, KDevelop::ProjectFolderItem*, KDevelop::ProjectFolderItem*>::runFunctor (this=0x1ad1780) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentstoredfunctioncall.h:412
#9  0x00007ff0ee12d65e in QtConcurrent::RunFunctionTask<void>::run (this=0x1ad1780) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentrunbase.h:134
#10 0x00007ff0f17d1d22 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#11 0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#12 0x00007ff0ef7e7efc in start_thread (arg=0x7ff07cd0f700) at pthread_create.c:304
#13 0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#14 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7ff07c50e700 (LWP 25355)):
#0  0x00007ff0f03cab21 in __dcigettext (domainname=0x7ff0f04f6db5 "libc", msgid1=0x7ff0f04f7228 "Bad file descriptor", msgid2=0x0, plural=0, n=0, category=5) at dcigettext.c:646
#1  0x00007ff0f041e253 in __GI___strerror_r (errnum=9, buf=0x52a3638 "", buflen=1024) at _strerror.c:65
#2  0x00007ff0f17d3a55 in qt_error_string(int) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#3  0x00007ff0f18ab841 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#4  0x00007ff0f18b34fe in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#5  0x00007ff0f18697a6 in QFile::readData(char*, long long) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#6  0x00007ff0f186f710 in QIODevice::read(char*, long long) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#7  0x00007ff0f187bc99 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#8  0x00007ff0f187c580 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#9  0x00007ff0f187d0cf in QTextStream::readLine(long long) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#10 0x00007ff0c41a3c72 in CMakeManager::readCache (this=0x492ebc0, path=...) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:1371
#11 0x00007ff0c419cbc9 in CMakeManager::initializeProject (this=0x492ebc0, project=0x498caa0) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:501
#12 0x00007ff0c419e9cd in CMakeManager::parse (this=0x492ebc0, item=0x4a71870) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:694
#13 0x00007ff0ee12d8d9 in KDevelop::ImportProjectJobPrivate::import (this=0x49aad10, folder=0x4a71870) at /home/milian/projects/kde4/kdevplatform/project/importprojectjob.cpp:53
#14 0x00007ff0ee12de2c in QtConcurrent::VoidStoredMemberFunctionPointerCall1<void, KDevelop::ImportProjectJobPrivate, KDevelop::ProjectFolderItem*, KDevelop::ProjectFolderItem*>::runFunctor (this=0x4a05d70) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentstoredfunctioncall.h:412
#15 0x00007ff0ee12d65e in QtConcurrent::RunFunctionTask<void>::run (this=0x4a05d70) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentrunbase.h:134
#16 0x00007ff0f17d1d22 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#17 0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#18 0x00007ff0ef7e7efc in start_thread (arg=0x7ff07c50e700) at pthread_create.c:304
#19 0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#20 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7ff07bd0d700 (LWP 25397)):
[KCrash Handler]
#6  0x00007ff0f03d03a5 in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007ff0f03d3b0b in __GI_abort () at abort.c:92
#8  0x00007ff0f0409d63 in __libc_message (do_abort=2, fmt=0x7ff0f04fae58 "*** glibc detected *** %s: %s: 0x%s ***\n") at ../sysdeps/unix/sysv/linux/libc_fatal.c:189
#9  0x00007ff0f04146e6 in malloc_printerr (action=3, str=0x7ff0f04f7ee7 "malloc(): memory corruption", ptr=<optimized out>) at malloc.c:6283
#10 0x00007ff0f0416248 in _int_malloc (av=0x7ff0c0000020, bytes=66) at malloc.c:4396
#11 0x00007ff0f04183cd in __GI___libc_malloc (bytes=66) at malloc.c:3660
#12 0x00007ff0f1825f43 in QString::fromLatin1_helper(char const*, int) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#13 0x00007ff0f182a23d in QString::fromAscii_helper(char const*, int) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#14 0x00007ff0c41a72b1 in QString::QString (this=0x7ff07bd0c320, ch=0x7ff0c41ba37c "CMAKE_MODULE_PATH") at /home/milian/projects/compiled/qt/include/QtCore/qstring.h:419
#15 0x00007ff0c419ca30 in CMakeManager::initializeProject (this=0x492ebc0, project=0x3d954c0) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:495
#16 0x00007ff0c419e9cd in CMakeManager::parse (this=0x492ebc0, item=0x4a751b0) at /home/milian/projects/kde4/kdevelop/projectmanagers/cmake/cmakemanager.cpp:694
#17 0x00007ff0ee12d8d9 in KDevelop::ImportProjectJobPrivate::import (this=0x4a427c0, folder=0x4a751b0) at /home/milian/projects/kde4/kdevplatform/project/importprojectjob.cpp:53
#18 0x00007ff0ee12de2c in QtConcurrent::VoidStoredMemberFunctionPointerCall1<void, KDevelop::ImportProjectJobPrivate, KDevelop::ProjectFolderItem*, KDevelop::ProjectFolderItem*>::runFunctor (this=0x49b0810) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentstoredfunctioncall.h:412
#19 0x00007ff0ee12d65e in QtConcurrent::RunFunctionTask<void>::run (this=0x49b0810) at /home/milian/projects/compiled/qt/include/QtCore/qtconcurrentrunbase.h:134
#20 0x00007ff0f17d1d22 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#21 0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#22 0x00007ff0ef7e7efc in start_thread (arg=0x7ff07bd0d700) at pthread_create.c:304
#23 0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#24 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7ff07b4e5700 (LWP 25517)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007ff0f17dea6b in QWaitCondition::wait(QMutex*, unsigned long) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#2  0x00007ff0e945f864 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x50217e0, th=0x5009060) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007ff0e9461e0b in ThreadWeaver::WorkingHardState::applyForWork (this=0x3a15430, th=0x5009060) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007ff0e9460ccf in ThreadWeaver::ThreadRunHelper::run (this=0x7ff07b4e4e00, parent=0x50217e0, th=0x5009060) at ../../../threadweaver/Weaver/Thread.cpp:87
#5  0x00007ff0e9460d5b in ThreadWeaver::Thread::run (this=0x5009060) at ../../../threadweaver/Weaver/Thread.cpp:142
#6  0x00007ff0f17de55b in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#7  0x00007ff0ef7e7efc in start_thread (arg=0x7ff07b4e5700) at pthread_create.c:304
#8  0x00007ff0f047d59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#9  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7ff0f33a17a0 (LWP 25094)):
#0  __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/x86_64/lowlevellock.S:97
#1  0x00007ff0f041a62f in _L_lock_10501 () from /lib/x86_64-linux-gnu/libc.so.6
#2  0x00007ff0f04189c1 in __GI___libc_free (mem=0x7ff0c0000020) at malloc.c:3736
#3  0x00007ff0f190c225 in ?? () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#4  0x00007ff0eb4f7734 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff0eb4f7f82 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007ff0eb4f8429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007ff0f190cb1f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#8  0x00007ff0f0ced88e in ?? () from /home/milian/projects/compiled/qt/lib/libQtGui.so.4
#9  0x00007ff0f18dc8b2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#10 0x00007ff0f18dcb07 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#11 0x00007ff0f18e1665 in QCoreApplication::exec() () from /home/milian/projects/compiled/qt/lib/libQtCore.so.4
#12 0x000000000040b7a2 in main (argc=3, argv=0x7fffb7f1d1c8) at /home/milian/projects/kde4/kdevelop/app/main.cpp:479


Expected Results:  
no crash

latest git master code
Comment 1 Milian Wolff 2012-03-29 17:41:33 UTC
*** Bug 297058 has been marked as a duplicate of this bug. ***
Comment 2 Milian Wolff 2012-03-29 17:42:23 UTC
aleix, please look into this :(
Comment 3 Aleix Pol 2012-03-30 15:47:17 UTC
Git commit 056c6b717f7afb4c60b7acdfbcab11a9902f55f3 by Aleix Pol.
Committed on 30/03/2012 at 17:42.
Pushed by apol into branch '4.3'.

Limit project initialization, only let 1 project to be set up at a time.

Helps serialize the KConfig calls issued when the project import is bootstrapped.

M  +2    -1    projectmanagers/cmake/cmakemanager.cpp

http://commits.kde.org/kdevelop/056c6b717f7afb4c60b7acdfbcab11a9902f55f3
Comment 4 Aleix Pol 2012-03-30 15:50:44 UTC
Git commit 7e6c2e686a51577a8ea88cd3719969fc73ce46c7 by Aleix Pol.
Committed on 30/03/2012 at 17:42.
Pushed by apol into branch 'master'.

Limit project initialization, only let 1 project to be set up at a time.

Helps serialize the KConfig calls issued when the project import is bootstrapped.

M  +2    -1    projectmanagers/cmake/cmakemanager.cpp

http://commits.kde.org/kdevelop/7e6c2e686a51577a8ea88cd3719969fc73ce46c7
Comment 5 Milian Wolff 2012-04-08 17:01:25 UTC
*** Bug 292927 has been marked as a duplicate of this bug. ***
Comment 6 Milian Wolff 2012-04-13 10:51:00 UTC
*** Bug 297985 has been marked as a duplicate of this bug. ***
Comment 7 Milian Wolff 2012-08-31 14:43:28 UTC
*** Bug 305094 has been marked as a duplicate of this bug. ***
Comment 8 Milian Wolff 2012-11-10 15:33:49 UTC
*** Bug 308864 has been marked as a duplicate of this bug. ***
Comment 9 Milian Wolff 2012-11-10 15:33:55 UTC
*** Bug 309199 has been marked as a duplicate of this bug. ***
Comment 10 Milian Wolff 2012-11-10 15:34:31 UTC
Apparently people were able to reproduce this even in kdevelop 4.3.1 which should contain the fixes above. We should investigate and seriously cleanup the cmake manager code.
Comment 11 Milian Wolff 2012-11-10 17:30:19 UTC
Git commit b867b9b0327a5a4eec625fb94f37140951d1d56f by Milian Wolff.
Committed on 10/11/2012 at 18:27.
Pushed by mwolff into branch 'master'.

Don't trigger reload of project that is being reloaded.

That can lead to crashes and random races due to the messed up
thread handling in the cmake manager code.
Related: bug 309835

M  +1    -1    projectmanagers/cmake/cmakemanager.cpp

http://commits.kde.org/kdevelop/b867b9b0327a5a4eec625fb94f37140951d1d56f
Comment 12 Kevin Funk 2012-12-22 20:23:10 UTC
*** Bug 312029 has been marked as a duplicate of this bug. ***
Comment 13 Kevin Funk 2013-01-31 20:49:47 UTC
*** Bug 280994 has been marked as a duplicate of this bug. ***
Comment 14 Milian Wolff 2013-11-16 20:14:03 UTC
Note: With the refactoring of the cmake manager in KDevelop 4.6 (fixes are in master since August 2013), I hope this was resolved. If anyone can reproduce this issue with 4.6 or current master, please reopen this bug report.