Limit project initialization, only let 1 project to be set up at a time.

Helps serialize the KConfig calls issued when the project import is bootstrapped.

BUG: 296348